<resources>
    <string name="app_name">Databike Companion</string>
    <string name="degree_template">%.3f</string>
    <string name="captureButtonText">Capture</string>
    <string name="absRotX">absRotX</string>
    <string name="absRotY">absRotY</string>
    <string name="absRotZ">absRotZ</string>
    <string name="add_data_point">Add data point</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="action_export">Export Data</string>
    <string name="segment">Segment</string>
    <string name="intHint">0</string>
    <string name="latitude">Latitude</string>
    <string name="floatHint">0.0</string>
    <string name="longitude">Longitude</string>
    <string name="timeStamp">Time</string>
    <string name="addRotX">Delta rotation X</string>
    <string name="addRotY">Delta rotation Y</string>
    <string name="addRotZ">Delta rotation Z</string>
    <string name="wheel_rpm">Wheel RPM</string>
    <string name="steering_rotation">Steering rotation</string>
    <string name="pedal_rotation">Pedal rotation</string>
    <string name="pedalRotDir">Pedal rotation direction</string>
    <string name="front_gear">Front gear</string>
    <string name="rear_gear">Rear gear</string>
    <string name="front_brake">Front brake</string>
    <string name="rear_brake">Rear brake</string>
    <string name="seat_position">Seat position</string>
    <string name="rear_suspension">Rear suspension</string>
    <string name="front_suspension">Front suspension</string>
    <string name="elevation">Elevation</string>
</resources>